Fix: 1719 Columns are misaligned on Payments->Transactions/Disputes page - override alignment for transaction list page - override alignment for dispute page

--- a/client/disputes/style.scss
+++ b/client/disputes/style.scss
@@ -1,3 +1,11 @@
+// dispute list table css override
+.disputes-list {
+	.woocommerce-table__header:not( .is-left-aligned ),
+	.woocommerce-table__item:not( .is-left-aligned ) {
+		text-align: center;
+	}
+}
+
 // TODO generalize most of these styles to other WCPay views, if not WooCommerce Admin in general.
 .wcpay-dispute-details,
 .wcpay-dispute-evidence {
